[bugfix] Button: vertical align incorrect when loading

--- a/packages/vant-css/src/button.css
+++ b/packages/vant-css/src/button.css
@@ -74,7 +74,7 @@
 
   &--loading {
     .van-loading {
-      margin: 0 auto;
+      display: inline-block;
     }
 
     .van-button__text {
